--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: 王科杰
 subtitle: Jack's Notes
 description: 书山有路勤为径，学海无涯苦作舟！
-author: Jack Wong
+author: Jack Wang
 language: zh-Hans
 timezone:
 
@@ -82,15 +82,15 @@ theme: hexo-next
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  - type: ftpsync
-    host: 60.205.47.3
-    user: bxu2713750252
-    pass: jieyuan1314
-    remote: /htdocs/
-    port: 21
-    ignore: /logreport/
-    connections: 1
-    verbose: true
+  # - type: ftpsync
+  #   host: 60.205.47.3
+  #   user: bxu2713750252
+  #   pass: jieyuan1314
+  #   remote: /htdocs/
+  #   port: 21
+  #   ignore: /logreport/
+  #   connections: 1
+  #   verbose: true
   - type: git
     repo: https://github.com/wangkejie/blogspage.git
     branch: master
