--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "themes/next"]
 	path = themes/hexo-next
-	url = git://github.com/wangkejie/hexo-next.git
+	url = git@github.com:wangkejie/hexo-next.git
 	branch = master
