--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,6 @@
-[submodule "themes/next"]
-	path = themes/hexo-next
-	url = git@github.com:wangkejie/hexo-next.git
-	branch = master
 [submodule "source/_posts"]
 	path = source/_posts
 	url = git@github.com:wangkejie/post.git
+[submodule "themes/next"]
+	path = themes/next
+	url = /Users/mac/Documents/GitHub/blogs/themes/next
