--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: 王科杰
 subtitle: Jack's Notes
 description: 书山有路勤为径，学海无涯苦作舟！
 author: Jack Wang
-language: zh-Hans
+language: zh-CN
 timezone:
 
 # URL
@@ -77,7 +77,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: hexo-next
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
