--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "source/_posts"]
+	path = source/_posts
+	url = git@github.com:wangkejie/post.git
 [submodule "themes/next"]
 	path = themes/next
 	url = /Users/mac/Documents/GitHub/blogs/themes/next
