--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git@github.com:wangkejie/post.git
 [submodule "themes/next"]
 	path = themes/next
-	url = /Users/mac/Documents/GitHub/blogs/themes/next
+url=git@github.com:theme-next/hexo-theme-next.git
