--- a/source/_data/next.yml
+++ b/source/_data/next.yml
@@ -157,7 +157,7 @@ baidu_push: true
 # Value after `||` delimiter is the name of FontAwesome icon. If icon (with or without delimiter) is not specified, question icon will be loaded.
 # External url should start with http:// or https://
 menu:
-  home: / || home
+  home: /iOS || home
   # about: /RunLoop/ || user
   tags: /tags/ || tags
   categories: /categories/ || th
