--- a/source/_data/next.yml
+++ b/source/_data/next.yml
@@ -158,7 +158,6 @@ baidu_push: true
 # External url should start with http:// or https://
 menu:
   home: / || home
-  # about: /RunLoop/ || user
   tags: /tags/ || tags
   categories: /categories/ || th
   archives: /archives/ || archive
@@ -166,6 +165,7 @@ menu:
   # sitemap: /sitemap.xml || sitemap
   # commonweal: /404/ || heartbeat
   # iOS技术目录: /iOS技术汇总/ || user
+  about: /RunLoop/ || user
 
 # Enable / Disable menu icons / item badges.
 menu_settings:
