--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ skip_render:
 # Writing
 new_post_name: :title.md # File name of new posts
 default_layout: post
-titlecase: true # Transform title into titlecase
+titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 0
 render_drafts: false
@@ -55,7 +55,9 @@ highlight:
 index_generator:
   path: ''
   per_page: 10
-  order_by: -date
+  order_by: 
+    top: -1
+    date: -1
   
 # Category & Tag
 default_category: uncategorized
