--- a/source/_data/next.yml
+++ b/source/_data/next.yml
@@ -778,8 +778,8 @@ vkontakte_api:
 # Star rating support to each article.
 # To get your ID visit https://widgetpack.com
 rating:
-  enable: false
-  id:     #<app_id>
+  enable: true
+  id:     19683
   color:  fc6423
 # ---------------------------------------------------------------
 
