--- a/source/_data/next.yml
+++ b/source/_data/next.yml
@@ -140,7 +140,7 @@ exturl: false
 
 # Baidu Webmaster tools verification.
 # See: https://ziyuan.baidu.com/site
-#baidu_site_verification:
+baidu_site_verification: 9BDlx6FiNE
 
 # Enable baidu push so that the blog will push the url to baidu automatically which is very helpful for SEO.
 baidu_push: true
@@ -778,7 +778,7 @@ vkontakte_api:
 # Star rating support to each article.
 # To get your ID visit https://widgetpack.com
 rating:
-  enable: true
+  enable: false
   id:     19683
   color:  fc6423
 # ---------------------------------------------------------------
