--- a/source/_data/next.yml
+++ b/source/_data/next.yml
@@ -140,7 +140,7 @@ exturl: false
 
 # Baidu Webmaster tools verification.
 # See: https://ziyuan.baidu.com/site
-baidu_site_verification: 9BDlx6FiNE
+baidu_site_verification: "9BDlx6FiNE"
 
 # Enable baidu push so that the blog will push the url to baidu automatically which is very helpful for SEO.
 baidu_push: true
