--- a/source/_data/next.yml
+++ b/source/_data/next.yml
@@ -198,7 +198,7 @@ site_state: true
 # Value before `||` delimiter is the target permalink.
 # Value after `||` delimiter is the name of FontAwesome icon. If icon (with or without delimiter) is not specified, globe icon will be loaded.
 social:
-  # GitHub: https://github.com/yourname || github
+  GitHub: https://github.com/Jack-Ving || github
   E-Mail: mailto:727881945@qq.com || envelope
   #Weibo: https://weibo.com/yourname || weibo
   #Google: https://plus.google.com/yourname || google
