--- a/source/_data/next.yml
+++ b/source/_data/next.yml
@@ -100,7 +100,7 @@ creative_commons:
 # `Follow me on GitHub` banner in the top-right corner.
 github_banner:
   enable: true
-  permalink: https://github.com/wangkejie
+  permalink: https://github.com/Jack-Ving
   title: Follow me on GitHub
 
 
