--- a/source/_data/next.yml
+++ b/source/_data/next.yml
@@ -124,7 +124,7 @@ seo: true
 index_with_subtitle: false
 
 # Automatically add external URL with BASE64 encrypt & decrypt.
-exturl: false
+exturl: true
 
 # Google Webmaster tools verification.
 # See: https://www.google.com/webmasters
